서블릿과 파일 업로드

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=upload
+
+# ? ??? ???? HTTP ?? ???? ??? ? ??. (??? ?? 3.2?? debug ??? trace ? ???? ??? ????.)
+# logging.level.org.apache.coyote.http11=trace
+# ? ??? ?? ??? ????? ????? ??? ??? ?? ???.
+# spring.servlet.multipart.enabled=false
+
+file.dir=C:\\Users\\jtadmin\\Desktop\\bmj\\study\\java\\spring\\mvc2\\uploadServer\\
